Trac-425 - Fixing font-weight for behind section title

--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -144,6 +144,12 @@
     }
 }
 
+.behind-vlasni {
+    h2 {
+        font-weight: @normal;
+    }
+}
+
 .vlasni-partners {
     margin-top: 75px;
 
